; ModuleID = '/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_player.c_MarshalPlaybackStatus.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/control/dbus/extr_dbus_player.c_MarshalPlaybackStatus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 }

@PLAYBACK_STATUS_PLAYING = common dso_local global i8* null, align 8
@PLAYBACK_STATUS_PAUSED = common dso_local global i8* null, align 8
@PLAYBACK_STATUS_STOPPED = common dso_local global i8* null, align 8
@DBUS_TYPE_STRING = common dso_local global i32 0, align 4
@VLC_ENOMEM = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*)* @MarshalPlaybackStatus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MarshalPlaybackStatus(%struct.TYPE_5__* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %10 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %9, i32 0, i32 0
  %11 = load %struct.TYPE_4__*, %struct.TYPE_4__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @vlc_playlist_GetPlayer(i32 %13)
  store i32* %14, i32** %6, align 8
  %15 = load i32*, i32** %6, align 8
  %16 = call i32 @vlc_player_Lock(i32* %15)
  %17 = load i32*, i32** %6, align 8
  %18 = call i32 @vlc_player_GetState(i32* %17)
  store i32 %18, i32* %7, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @vlc_player_Unlock(i32* %19)
  %21 = load i32, i32* %7, align 4
  switch i32 %21, label %26 [
    i32 128, label %22
    i32 129, label %22
    i32 130, label %24
  ]

22:                                               ; preds = %2, %2
  %23 = load i8*, i8** @PLAYBACK_STATUS_PLAYING, align 8
  store i8* %23, i8** %8, align 8
  br label %28

24:                                               ; preds = %2
  %25 = load i8*, i8** @PLAYBACK_STATUS_PAUSED, align 8
  store i8* %25, i8** %8, align 8
  br label %28

26:                                               ; preds = %2
  %27 = load i8*, i8** @PLAYBACK_STATUS_STOPPED, align 8
  store i8* %27, i8** %8, align 8
  br label %28

28:                                               ; preds = %26, %24, %22
  %29 = load i32*, i32** %5, align 8
  %30 = load i32, i32* @DBUS_TYPE_STRING, align 4
  %31 = call i32 @dbus_message_iter_append_basic(i32* %29, i32 %30, i8** %8)
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %35, label %33

33:                                               ; preds = %28
  %34 = load i32, i32* @VLC_ENOMEM, align 4
  store i32 %34, i32* %3, align 4
  br label %37

35:                                               ; preds = %28
  %36 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %36, i32* %3, align 4
  br label %37

37:                                               ; preds = %35, %33
  %38 = load i32, i32* %3, align 4
  ret i32 %38
}

declare dso_local i32* @vlc_playlist_GetPlayer(i32) #1

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i32 @vlc_player_GetState(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1

declare dso_local i32 @dbus_message_iter_append_basic(i32*, i32, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
